[gd_scene load_steps=6 format=3 uid="uid://d0mhua3nh6o1"]

[ext_resource type="PackedScene" uid="uid://ctj8a1spf6tn8" path="res://Scenes/Turrets/turret_container.tscn" id="1_mncut"]
[ext_resource type="Script" path="res://Scenes/Turrets/Fish Launcher/fish_launcher_container.gd" id="2_240dc"]
[ext_resource type="PackedScene" uid="uid://bgfvpb1o1ktn" path="res://Models/Turrets/Fish Launcher/fish_launcher.tscn" id="3_e1to8"]
[ext_resource type="PackedScene" uid="uid://1b1fobgndu82" path="res://Scenes/Turrets/Fish Launcher/fish_projectile.tscn" id="3_gj476"]
[ext_resource type="AudioStream" uid="uid://c3utre8n8ihrk" path="res://audio/Fireball.mp3" id="5_r17kn"]

[node name="FishLauncherContainer" instance=ExtResource("1_mncut")]
script = ExtResource("2_240dc")
fire_rate_ms = 2000
projectiles_to_shoot_at_a_time = 1
projectile_speed = 3.0
projectile_type = ExtResource("3_gj476")

[node name="FishLauncher" parent="." index="0" instance=ExtResource("3_e1to8")]

[node name="gunshot" type="AudioStreamPlayer2D" parent="." index="1"]
stream = ExtResource("5_r17kn")
volume_db = -0.857

[connection signal="area_entered" from="FishLauncher" to="." method="_on_fish_launcher_area_entered"]
[connection signal="area_exited" from="FishLauncher" to="." method="_on_fish_launcher_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
